# ComfyUI-yolov5-face

./: README.md  README.zh-CN.md  __init__.py  node.py  pyproject.toml
yolov5face/: detect_face.py  export.py  test.py  test_widerface.py  train.py
yolov5face/models/: experimental.py
yolov5face/torch2trt/: main.py  speed.py
yolov5face/utils/: autoanchor.py
yolov5face/utils/wandb_logging/: wandb_utils.py
